--- a/src/index.css
+++ b/src/index.css
@@ -1,24 +1,40 @@
-*{
+* {
   font-family: Helvetica, arial, sans-serif;
 }
 
 
-body{
+body {
+  /*background-image: url("./assets/fondo.jpg");*/
+  background-color: #439889;
   padding: 60px;
 }
 
-
-input{
-  text-align: center;
-  color: grey;
-  font-size: 1.2rem;
-  height: 35px;
-  width: 100%;
-  border: 1px solid black;
-  border-radius: 35px;  
+.contenedor-principal {
+  background-color: rgba(255, 255, 255, 0.7);
+  border-radius: 30px;
+  padding: 15px;
 }
 
-h2{
+.contenedor-principal > h1 {
+  display: grid;
+  place-items: center;
+  font-size: 50px;
+  margin-top: 0;
+  margin-bottom: 0;
+}
+
+
+input {
+  text-align: center;
+  color: black;
+  font-size: 2rem;
+  height: 50px;
+  width: 100%;
+  border: 3px solid orange;
+  border-radius: 35px;
+}
+
+h2 {
   float: none;
 }
 
@@ -26,26 +42,36 @@ input:focus {
   outline: none;
 }
 
-.card-grid{
+
+
+.card-grid {
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
+  justify-content: center;
 }
 
-.card{
+.card {
   align-content: center;
   border: 1px solid gray;
   border-radius: 6px;
   overflow: hidden;
   margin-bottom: 10px;
   margin-right: 10px;
+  background-color: white;
+  height: 300px;
 }
 
-.card p{
+.card p {
   padding: 5px;
   text-align: center;
 }
 
-.card img{
-  max-height: 170px;
+.card img {
+  height: 50%;
+  width: 100%;
+}
+
+.item-img-gif {
+  width: 300px;
 }
